# pdftotext-docker-rest

./: Dockerfile  pyproject.toml  webserver.py
